# solana-conformance

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  buf.gen.yaml  clean.sh  commands.md  debug.gdb  debug_it.sh  deps.sh  ensure_buf.sh  ensure_flatc.sh  exec_it.sh  fetch_and_generate.sh  foo.txt  generate.sh  generate_flatbuffers.sh  install.sh  install_lite.sh  install_ubuntu.sh  install_ubuntu_lite.sh  invoke.proto  pyproject.toml  pytest.ini  run_integration_tests.sh  setup.py  shell.nix  solana-conformance  superbased58.pxd  superbased58.pyx  vm.proto
.github/workflows/: check.yml  ci.yml
generators/: all.sh  ed25519.py  elf.py  gossip.py  precompile_secp256r1.py  secp256k1.py  syscalls_alt_bn128.py  syscalls_curve25519.py  syscalls_hash.py  syscalls_poseidon.py  syscalls_secp256k1.py  syscalls_util.py  vm_interp.py  zksdk.py
impl/: .gitignore  Makefile
scripts/: check_protobuf_version.sh  check_quick_import.sh
src/examples/migrations/: dedup_blockhash_queue.py  fixup_clock_and_deployment_slot.py  fixup_sysvars.py  native_program_bpf_migration.py  normalize_clock_slot.py
src/test_suite/: block_pb2.py  codec_utils.py  constants.py  context_pb2.py  debug_target.py  debugger.py  elf_pb2.py  exec_v2_pb2.py  features_utils.py  fixture_utils.py  flatbuffers_utils.py  fuzz_context.py  fuzz_interface.py  fuzzcorp_api_client.py  fuzzcorp_auth.py  fuzzcorp_utils.py  globals.py  instr_v2_pb2.py  invoke_pb2.py  log_utils.py  metadata_pb2.py  minimize_utils.py  multiprocessing_utils.py  octane_api_client.py  octane_utils.py  pack_pb2.py  pb_utils.py  sanitizer_utils.py  serialize_pb2.py  shred_pb2.py  slot_v2_pb2.py  sol_compat.py  test_suite.py  txn_pb2.py  txn_v2_pb2.py  type_pb2.py  util.py  utils.py  validation_utils.py  vm_pb2.py
src/test_suite/block/: codec_utils.py  transform_utils.py
src/test_suite/context/: codec_utils.py
src/test_suite/elf_loader/: codec_utils.py  diff_bin.py  diff_bin.sh  elf_loader_exec.py  elf_proto_converter.py  elf_suite.py  find_closest_elf_corpus.py  fuzz_context.py
src/test_suite/flatbuffers/: __init__.py
src/test_suite/gossip/: codec_utils.py
src/test_suite/instr/: codec_utils.py  diff_utils.py  fixture_utils.py  harness.py  minimize.py  multiprocessing_utils.py  prune_utils.py  test_suite.py  transform_utils.py
src/test_suite/instr_v2/: codec_utils.py  diff_utils.py  prune_utils.py
src/test_suite/protos/: block_pb2.py  context_pb2.py  elf_pb2.py  gossip_pb2.py  invoke_pb2.py  metadata_pb2.py  pack_pb2.py  serialize_pb2.py  shred_pb2.py  txn_pb2.py  type_pb2.py  vm_pb2.py
src/test_suite/syscall/: codec_utils.py  transform_utils.py
src/test_suite/txn/: codec_utils.py  diff_utils.py  prune_utils.py  transform_utils.py
src/test_suite/type/: diff_utils.py
tests/: conftest.py  setup_test_data.py  test_fb_regeneration.py  test_flatbuffers.py  test_integration.py  test_scripts.py  test_solana_test_suite.py
(+22 files in other folders)
