[project]
name = "Solana-Test-Suite"
description = "Tests client targets against Solana"
authors = [
  { name = "Manik Jain", email = "mjain@jumptrading.com"}
]
dynamic = ['version']
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fd58~=0.1.0",
  "loguru~=0.7.0",
  "protobuf~=3.19.0",
  "typer~=0.9.0",
  "Cython>=3.0.9",
  "tqdm~=4.66.0"
]

[project.scripts]
solana-test-suite = "test_suite.instr.test_suite:app"
solana-elf-suite = "test_suite.elf_loader.elf_suite:app"
elf-proto-tools = "test_suite.elf_loader.elf_proto_converter:main"

[project.optional-dependencies]
test = [
  "black>=22.10.0",
  "pre-commit>=2.20.0",
  "pytest-clarity>=1.0.1",
  "pytest-cov>=4.0.0",
  "pytest>=7.2.0",
]

dev = [
  "solana-test-suite[test]",
  "build>=0.10.0",
]

[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
