[project]
name = "Solana-Test-Suite"
description = "Tests client targets against Solana"
authors = [
  { name = "Manik Jain", email = "mjain@jumptrading.com"}
]
dynamic = ['version']
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fd58~=0.1.0",
  "loguru~=0.7.0",
  "protobuf~=4.25.0",
  "typer~=0.12.3",
  "Cython>=3.0.9",
  "tqdm~=4.66.0",
  "protoletariat~=3.2.19",
]

[project.scripts]
solana-test-suite = "test_suite.test_suite:app"

[project.optional-dependencies]
test = [
  "pytest-clarity>=1.0.1",
  "pytest-cov>=4.0.0",
  "pytest>=7.2.0",
]

dev = [
  "pre-commit>=2.20.0",
  "solana-test-suite[test]",
  "build>=0.10.0",
  "black>=22.10.0",
]

[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
