[project]
name = "Solana-Conformance"
description = "Conformance test client targets against Solana"
authors = [
  { name = "Manik Jain", email = "mjain@jumptrading.com"},
  { name = "Charles Moyes", email = "cmoyes@jumptrading.com"},
]
dynamic = ['version']
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fd58~=0.1.1",
  "loguru~=0.7.0",
  "typer~=0.12.3",
  "Cython>=3.0.9",
  "tqdm~=4.66.0",
  "bs4~=0.0.2",
  "click>=8.0.0,<8.2.0",
  "httpx[http2]~=0.27.0",
  "protobuf==6.33.4",
  "flatbuffers>=24.3.25",
  "numpy>=1.24.0",
]

[project.scripts]
solana-conformance = "test_suite.test_suite:app"

[project.optional-dependencies]
octane = [
  "google-cloud-storage>=2.0.0",
  "google-auth>=2.0.0",
  "boto3>=1.26.0",
]

test = [
  "pytest-clarity>=1.0.1",
  "pytest-cov>=4.0.0",
  "pytest>=7.2.0",
]

dev = [
  "pre-commit>=2.20.0",
  "solana-conformance[test]",
  "build>=0.10.0",
  "black==24.3.0",
]

[build-system]
requires = ["setuptools", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.black]
extend-exclude = '''
/(
    /flatbuffers/
    | _pb2\.py$
)/
'''
